# X4VRMOD

./: .gitignore  CLAUDE.md  README.md
bridge/: Makefile  xr2x4.c  xr2x4.og
docs/: dibr-vkshade.md
patches/: 0001-vkshade-fix-predefined-macro-redefinition-and-log-pp-errors.patch  0001-vkshade-fixes.patch
probe/: RESULTS.md  aer_probe.py  analyze.py
shared/: x4vr_shm.h
tools/: shmdump.c
viewer/: CMakeLists.txt  README.md
viewer/src/: main.c
